# stainsegmy

./: .gitignore  Dockerfile  MANIFEST.in  README.md  cli_pred.py  environment.yml  pyproject.toml
.github/workflows/: publish_container.yml  publish_container_self.yml
losses/: FocalLosses.py
model/: model_components.py  unet_instance.py  unet_super.py
patch_extractor/: patch_extractor.py
stainsegmy/: LICENSE  __init__.py  cli_pred.py
stainsegmy/model/: unet_instance.py  unet_super.py  utils.py
